# gtcal

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/: single_camera_cal_example.cpp  stereo_camera_cal_example.cpp
include/gtcal/: batch_solver.h  batch_solver.hpp  bspline_se3.hpp  calibration_ctx.hpp  calibration_rig.hpp  calibration_target.hpp  camera.h  camera.hpp  camera_rig.h  camera_rig.hpp  measurement.hpp  pose_solver.h  pose_solver.hpp  pose_solver_gtsam.h  pose_solver_gtsam.hpp  random_pose_generator.hpp  simulator.hpp  utils.h  utils.hpp  viewer.hpp  viz.hpp
src/: batch_solver.cpp  bspline_se3.cpp  calibration_ctx.cpp  calibration_target.cpp  camera_rig.cpp  gtcal.cpp  pose_solver.cpp  pose_solver_gtsam.cpp  random_pose_generator.cpp  sim_dataset_generator.cpp  simulator.cpp  utils.cpp  viewer.cpp  viz.cpp
test/: CMakeLists.txt  gtcal_test_utils.h  gtcal_test_utils.hpp  gtcal_viz_utils.h  test_batch_solver.cpp  test_calibration_ctx.cpp  test_calibration_rig.cpp  test_calibration_target.cpp  test_camera.cpp  test_camera_rig.cpp  test_gtcal_test_utils.cpp  test_pose_solver.cpp  test_pose_solver_gtsam.cpp  test_pose_solvers.cpp  test_simulator.cpp
